2001-11-29 Stephen Browne <stephen.browne@sun.com>

	* Makefile.am

	added PANELCONFIG_CFLAGS to includes to fix build 
	of gnome-panel-properties

2001-11-29 Stephen Browne <stephen.browne@sun.com>

	* Makefile.am

	Added gnome-panel-properties build target and 
	associated glade stuff.

	* gnome-panel-properties.c

	This is a work in progress but at least its started.
	Mostly ripped this out and started again.
	Now uses libglade and gconf.
	The GEGL Lives on.

2001-11-29  Glynn Foster  <glynn.foster@sun.com>

	* basep-widget.c, button-widget.c,  menu.c,  
	panel-widget.c,  panel_config_global.h,
	panelglobalconfig.schemas, session.c: 

	Changed some of the configuration around to be more 
	sensible. Removed titles on menus code forever. Fix
	bug where launchers/applets would move off the left 
	hand side of the screen.

2001-11-29  Glynn Foster <glynn.foster@sun.com>
	
	* panel-gconf.[ch]: Add some more convience methods.
	Not entirely sure if this is useful yet.

2001-11-29  Mark McLoughlin  <mark@skynet.ie>

	* applet.c: (applet_button_press): tidy.

2001-11-28  Mark McLoughlin  <mark@skynet.ie>

	* basep-widget.c: (basep_border_queue_recalc): use
          g_idle_add instead of gtk_idle_add and save a few
          stackframes.

2001-11-28  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: don't build extern.[ch].

	* applet.c:
	(applet_idle_remove): handle bonobo applets, remove 
	extern stuff.
	(applet_remove_callback): use g_idle_add.
	(applet_callback_callback): fixme for bonobo applets,
	remove extern stuff.

	* applet.h: kill extern stuff.

	* main.c: don't include extern.h. kill panel_in_startup.
	(main): move panel shell registration to panel-shell.h.

	* menu.c:
	(add_test_applet): kill.
	(add_applet): kill.
	(make_add_submenu): kill testing menuitem.

	* panel-applet-frame.[ch]:
	(panel_applet_frame_save_position): impl stub.

	* panel-shell.[ch]:
	(panel_shell_show_error_dialog): impl.
	(panel_shell_register), (panel_shell_unregister): impl.
