@@ -1,3 +1,10 @@
+2001-11-30  Glynn Foster  <glynn.foster@sun.com>
+
+	* panel-gconf.c, panel-gconf.h:
+	Added panel_gconf_get_session_key () to return
+	session ID based key. Probably not we will end 
+	up using eventually, but will do for now
+
 2001-11-29 Stephen Browne <stephen.browne@sun.com>
 
 	* Makefile.am
